--- a/src/components/player.css
+++ b/src/components/player.css
@@ -42,11 +42,16 @@
 }
 
 .imageContainer {
+  position: relative;
   width: 100%;
   max-width: 230px;
   text-align: center;
-  overflow: hidden;
   display: inline-block;
+}
+
+.unit .tierGlow {
+  transform: scale(1.3);
+  left: 110px;
 }
 
 .healthBar {
