--- a/src/header.css
+++ b/src/header.css
@@ -30,5 +30,37 @@
 .pageWrapper {
     padding: 0 10px 10px;
     overflow: hidden;
+}
 
+.modal {
+    position: fixed;
+    width: 500px;
+    padding: 20px;
+    border-radius: 10px;
+    min-height: 200px;
+    background: #333;
+    box-shadow: 0 0 5px black;
+    z-index: 10;
+    margin-left: calc(50vw - 250px);
+}
+.modal .closeButton {
+    border: none;
+    background-color: transparent;
+    font-size: 20px;
+    color: white;
+    font-weight: bolder;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+
+.blocker {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.37);
+    z-index: 8;
+    border: none;
 }
